modules/k8s/yaml/argocd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
