modules/k8s/yaml/self-hosted-runner.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: self-hosted-runners
