modules/k8s/yaml/public-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1-public
spec:
  type: LoadBalancer
  selector:
    app: nginx-v1
  ports:
    - port: 80
      targetPort: http
