modules/k8s/yaml/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
  namespace: ingress-service
spec:
  ingressClassName: nginx
  rules:
    - host: devopsbyexample.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-app-svc-bridge
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-service
  name: hello-app-svc-bridge
spec:
  type: ExternalName
  externalName: hello-app-service.microservices.svc.cluster.local
  ports:
  - port: 80
