modules/k8s/yaml/microservices.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices

---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-service

---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: microservices
  name: hello-app-deployment
  labels:
    app: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: httpd
        image: httpd
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  namespace: microservices
  name: hello-app-service
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
  namespace: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-ingress-class: "nginx"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "*.cloudmastery.info"
    secretName: cloudmastery-certificate
  rules:
    - host: hello-world.cloudmastery.info
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-app-svc-bridge
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-service
  name: hello-app-svc-bridge
spec:
  type: ExternalName
  externalName: hello-app-service.microservices.svc.cluster.local
  ports:
  - port: 80

---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-ingress
#   namespace: argocd
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#     cert-manager.io/cluster-issuer: letsencrypt-staging
#     acme.cert-manager.io/http01-ingress-class: "nginx"
# spec:
#   ingressClassName: nginx
#   tls:
#     - hosts:
#       - "*.cloudmastery.info"
#       secretName: cloudmastery-certificate
#   rules:
#     - host: argocd.cloudmastery.info
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: argocd-server
#                 port:
#                   name: https
